# cargo-deep-link

./: Cargo.toml  LICENSE_MIT  README.md
examples/: main.rs
src/: lib.rs  linux.rs  macos.rs  windows.rs  windows_single.rs
