[package]
name = "cargo-deep-link"
version = "0.1.0"
authors = ["FabianLars <fabianlars@fabianlars.de>", "jf908"]
description = "A library for deep linking support"
repository = "https://github.com/jf908/cargo-deep-link"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
readme = "README.md"
include = ["src/**", "Cargo.toml", "LICENSE_*"]

[dependencies]
dirs = "5"
log = "0.4"

[target.'cfg(windows)'.dependencies]
interprocess = { version = "1.2", default-features = false }
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.55.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.4.1"

[dev-dependencies]
eframe = "0.30"
env_logger = "0.11"
