[package]
name = "cargo-deep-link"
version = "0.1.0"
authors = [
    "jf908",
    "Tauri Programme within The Commons Conservancy",
    "FabianLars <fabianlars@fabianlars.de>",
]
description = "A library for deep linking support"
repository = "https://github.com/jf908/cargo-deep-link"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
readme = "README.md"
include = ["src/**", "Cargo.toml", "LICENSE_*"]

[dependencies]
dirs = "5"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }
dunce = "1"
windows-registry = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.4.1"

[dev-dependencies]
eframe = "0.30"
env_logger = "0.11"
